# apigen

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
apigen/: __init__.py  main.py  openapi.py
apigen/templates/: api.rs  docs.html  enum.rs  error.rs  hashmap.rs  struct.rs  vec.rs
examples/helloworld/: Cargo.toml
examples/helloworld/src/: main.rs  server.rs
examples/helloworld/src/server/: api.rs
examples/helloworld/src/server/static/: docs.html  openapi.yaml
